welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: not found: value setCouleurSol
	setCouleurSol(Color.RED)
        ^PatternPicture:6: error: not found: value setCouleurSol
	setCouleurSol(Color.BLUE)
        ^PatternPicture:8: error: not found: value setCouleurSol
	setCouleurSol(Color.GREEN)
        ^