welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
def faireV(){
	setCouleurSol(Color.RED)
	avance();baisseBrosse()
	setCouleurSol(Color.BLUE)
	avance();leveBrosse();avance();gauche();avance();baisseBrosse()
	setCouleurSol(Color.GREEN)
	avance();leveBrosse();recule();recule();avance()
}
}
